Passagem pelo Array
Corrigido bugs na passagem de uma aluno para outro do Array
Definido o primeiro curso como padrão no comboBox
Adicionado o botão de excluir
Averiguado bug no botão de excluir na ausência de elementos no Array(Não corrigido)

--- a/src/cadastro/de/aluno/CadastroForm.fxml
+++ b/src/cadastro/de/aluno/CadastroForm.fxml
@@ -72,7 +72,7 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <Button layoutX="494.0" layoutY="536.0" mnemonicParsing="false" text="Excluir">
+      <Button layoutX="494.0" layoutY="536.0" mnemonicParsing="false" onKeyPressed="#excluirBtn_KeyPressed" onMouseClicked="#excluirBtn_Clicked" text="Excluir">
          <font>
             <Font size="14.0" />
          </font>
